// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhiteBrightCrossSlider components basic render 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "height": 704,
        "width": 704,
      },
    ]
  }
>
  <HueBrightSlider
    bright={1000}
    label="Brightness"
    max={1000}
    min={10}
    size={688}
    trackWidth={54}
  />
  <View
    style={
      Object {
        "height": 704,
        "justifyContent": "center",
        "position": "absolute",
      }
    }
  >
    <Temperature
      label="Temperature"
      max={1000}
      min={0}
      size={688}
      temp={0}
      trackWidth={54}
    />
  </View>
</View>
`;

exports[`WhiteBrightCrossSlider components componentWillReceiveProps render 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "height": 704,
        "width": 704,
      },
    ]
  }
>
  <HueBrightSlider
    bright={1000}
    label="Brightness"
    max={1000}
    min={10}
    size={688}
    trackWidth={54}
  />
  <View
    style={
      Object {
        "height": 704,
        "justifyContent": "center",
        "position": "absolute",
      }
    }
  >
    <Temperature
      label="Temperature"
      max={1000}
      min={0}
      size={688}
      temp={0}
      trackWidth={54}
    />
  </View>
</View>
`;

exports[`WhiteBrightCrossSlider components render touch 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-only"
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "height": 704,
        "width": 704,
      },
    ]
  }
>
  <HueBrightSlider
    bright={800}
    label="Brightness"
    max={1000}
    min={10}
    size={688}
    trackWidth={54}
  />
  <View
    style={
      Object {
        "height": 704,
        "justifyContent": "center",
        "position": "absolute",
      }
    }
  >
    <Temperature
      label="Temperature"
      max={1000}
      min={0}
      size={688}
      temp={30}
      trackWidth={54}
    />
  </View>
</View>
`;
